// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en  el <GifGrid/> Debe mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    HIMYM
  </h3>
  <div
    className="cardGrid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http://dfgerg.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en  el <GifGrid/> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    HIMYM
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="cardGrid"
  />
</Fragment>
`;
